Sat Apr 20 00:10:39 UTC 2024
l/gdk-pixbuf2-2.42.11-x86_64-2.txz:  Rebuilt.
  Recompiled with -Dtests=false -Dothers=enabled to fix gkrellm.
  Thanks to J_W for the bug report.
+--------------------------+
Fri Apr 19 19:36:17 UTC 2024
a/elogind-252.23-x86_64-3.txz:  Rebuilt.
  All right, it's time to stop the bleeding (edge). This has been verified as
  the last working version of elogind, so we'll revert for now while moving the
  newer sources into /testing. We didn't actually *need* the 255 branch for
  libgudev (I was mistakenly under that impression), so this will be fine for
  now. We'll keep an eye on upstream and move forward when things settle down.
d/vala-0.56.17-x86_64-1.txz:  Upgraded.
l/gdk-pixbuf2-2.42.11-x86_64-1.txz:  Upgraded.
l/gtk4-4.14.3-x86_64-1.txz:  Upgraded.
l/polkit-124-x86_64-2.txz:  Rebuilt.
  Recompiled against elogind-252.23.
l/python-sphinx-7.3.7-x86_64-1.txz:  Upgraded.
n/NetworkManager-1.46.0-x86_64-2.txz:  Rebuilt.
  Build with meson instead of autotools, since setting session_tracking to
  elogind is ignored with autotools, and is set to consolekit instead.
  While this didn't seem to make a difference in practice, better to get this
  right now and rule it out as part of the issue.
  Thanks to marav and LuckyCyborg for the options hints.
x/xdg-desktop-portal-1.18.4-x86_64-1.txz:  Upgraded.
xap/freerdp-2.11.6-x86_64-1.txz:  Upgraded.
  This release is a security release and addresses multiple issues:
  [Low] OutOfBound Read in zgfx_decompress_segment.
  [Moderate] Integer overflow & OutOfBound Write in
  clear_decompress_residual_data.
  [Low] integer underflow in nsc_rle_decode.
  [Low] OutOfBound Read in planar_skip_plane_rle.
  [Low] OutOfBound Read in ncrush_decompress.
  [Low] OutOfBound Read in interleaved_decompress.
  For more information, see:
    https://www.cve.org/CVERecord?id=CVE-2024-32041
    https://www.cve.org/CVERecord?id=CVE-2024-32039
    https://www.cve.org/CVERecord?id=CVE-2024-32040