@@ -11,9 +11,23 @@
       <description>Tracking Slackware development in git.</description>
       <language>en-us</language>
       <id xmlns="http://www.w3.org/2005/Atom">urn:uuid:c964f45e-6732-11e8-bbe5-107b4450212f</id>
-      <pubDate>Sat, 20 Apr 2024 00:10:39 GMT</pubDate>
-      <lastBuildDate>Sat, 20 Apr 2024 00:28:28 GMT</lastBuildDate>
+      <pubDate>Sun, 21 Apr 2024 21:41:34 GMT</pubDate>
+      <lastBuildDate>Sun, 21 Apr 2024 21:59:48 GMT</lastBuildDate>
       <generator>maintain_current_git.sh v 1.17</generator>
+      <item>
+         <title>Sun, 21 Apr 2024 21:41:34 GMT</title>
+         <pubDate>Sun, 21 Apr 2024 21:41:34 GMT</pubDate>
+         <link>https://git.slackware.nl/current/tag/?h=20240421214134</link>
+         <guid isPermaLink="false">20240421214134</guid>
+         <description>
+           <![CDATA[<pre>
+a/etc-15.1-x86_64-11.txz:  Rebuilt.
+  Populate missing /etc/gshadow entries. Thanks to opty.
+l/PyQt-builder-1.16.1-x86_64-1.txz:  Upgraded.
+l/python-pluggy-1.5.0-x86_64-1.txz:  Upgraded.
+           </pre>]]>
+         </description>
+      </item>
       <item>
          <title>Sat, 20 Apr 2024 00:10:39 GMT</title>
          <pubDate>Sat, 20 Apr 2024 00:10:39 GMT</pubDate>
