@@ -1,20 +1,20 @@
-Sat Apr 20 00:13:56 UTC 2024
+Sun Apr 21 21:44:53 UTC 2024
 
 Here is the file list for this directory.  If you are using a 
 mirror site and find missing or extra files in the disk 
 subdirectories, please have the archive administrator refresh
 the mirror.
 
-drwxr-xr-x 12 root root      4096 2024-04-20 00:10 .
+drwxr-xr-x 12 root root      4096 2024-04-21 21:41 .
 -rw-r--r--  1 root root      5767 2022-02-02 22:44 ./ANNOUNCE.15.0
 -rw-r--r--  1 root root     16617 2022-02-02 23:27 ./CHANGES_AND_HINTS.TXT
--rw-r--r--  1 root root   1148939 2024-04-19 19:41 ./CHECKSUMS.md5
--rw-r--r--  1 root root       195 2024-04-19 19:41 ./CHECKSUMS.md5.asc
+-rw-r--r--  1 root root   1148939 2024-04-20 00:14 ./CHECKSUMS.md5
+-rw-r--r--  1 root root       195 2024-04-20 00:14 ./CHECKSUMS.md5.asc
 -rw-r--r--  1 root root     17976 1994-06-10 02:28 ./COPYING
 -rw-r--r--  1 root root     35147 2007-06-30 04:21 ./COPYING3
 -rw-r--r--  1 root root     19573 2016-06-23 20:08 ./COPYRIGHT.TXT
 -rw-r--r--  1 root root       616 2006-10-02 04:37 ./CRYPTO_NOTICE.TXT
--rw-r--r--  1 root root   1051584 2024-04-20 00:10 ./ChangeLog.txt
+-rw-r--r--  1 root root   1051829 2024-04-21 21:41 ./ChangeLog.txt
 drwxr-xr-x  3 root root      4096 2013-03-20 22:17 ./EFI
 drwxr-xr-x  2 root root      4096 2024-04-17 20:10 ./EFI/BOOT
 -rw-r--r--  1 root root   1187840 2021-06-15 19:16 ./EFI/BOOT/bootx64.efi
@@ -25,9 +25,9 @@ drwxr-xr-x  2 root root      4096 2024-04-17 20:10 ./EFI/BOOT
 -rwxr-xr-x  1 root root      2504 2019-07-05 18:54 ./EFI/BOOT/make-grub.sh
 -rw-r--r--  1 root root     10722 2013-09-21 19:02 ./EFI/BOOT/osdetect.cfg
 -rw-r--r--  1 root root      1273 2013-08-12 21:08 ./EFI/BOOT/tools.cfg
--rw-r--r--  1 root root   1503950 2024-04-19 19:40 ./FILELIST.TXT
+-rw-r--r--  1 root root   1503950 2024-04-20 00:13 ./FILELIST.TXT
 -rw-r--r--  1 root root      1572 2012-08-29 18:27 ./GPG-KEY
--rw-r--r--  1 root root    907049 2024-04-20 00:13 ./PACKAGES.TXT
+-rw-r--r--  1 root root    907049 2024-04-21 21:44 ./PACKAGES.TXT
 -rw-r--r--  1 root root      8034 2022-02-02 03:36 ./README.TXT
 -rw-r--r--  1 root root      3629 2024-04-17 20:01 ./README.initrd
 -rw-r--r--  1 root root     34114 2023-12-11 20:35 ./README_CRYPT.TXT
@@ -683,13 +683,13 @@ drwxr-xr-x  2 root root      4096 2022-02-03 07:02 ./patches
 -rw-r--r--  1 root root       575 2022-02-03 07:02 ./patches/FILE_LIST
 -rw-r--r--  1 root root        14 2022-02-03 07:02 ./patches/MANIFEST.bz2
 -rw-r--r--  1 root root       224 2022-02-03 07:02 ./patches/PACKAGES.TXT
-drwxr-xr-x 17 root root      4096 2024-04-20 00:13 ./slackware64
--rw-r--r--  1 root root    353828 2024-04-20 00:13 ./slackware64/CHECKSUMS.md5
--rw-r--r--  1 root root       195 2024-04-20 00:13 ./slackware64/CHECKSUMS.md5.asc
--rw-r--r--  1 root root    438217 2024-04-20 00:12 ./slackware64/FILE_LIST
--rw-r--r--  1 root root   4625163 2024-04-20 00:12 ./slackware64/MANIFEST.bz2
+drwxr-xr-x 17 root root      4096 2024-04-21 21:44 ./slackware64
+-rw-r--r--  1 root root    353828 2024-04-21 21:44 ./slackware64/CHECKSUMS.md5
+-rw-r--r--  1 root root       195 2024-04-21 21:44 ./slackware64/CHECKSUMS.md5.asc
+-rw-r--r--  1 root root    438217 2024-04-21 21:43 ./slackware64/FILE_LIST
+-rw-r--r--  1 root root   4622641 2024-04-21 21:43 ./slackware64/MANIFEST.bz2
 lrwxrwxrwx  1 root root        15 2009-08-23 23:34 ./slackware64/PACKAGES.TXT -> ../PACKAGES.TXT
-drwxr-xr-x  2 root root     32768 2024-04-19 19:39 ./slackware64/a
+drwxr-xr-x  2 root root     32768 2024-04-21 21:43 ./slackware64/a
 -rw-r--r--  1 root root       327 2022-02-15 18:16 ./slackware64/a/aaa_base-15.1-x86_64-2.txt
 -rw-r--r--  1 root root     10720 2022-02-15 18:16 ./slackware64/a/aaa_base-15.1-x86_64-2.txz
 -rw-r--r--  1 root root       163 2022-02-15 18:16 ./slackware64/a/aaa_base-15.1-x86_64-2.txz.asc
@@ -774,9 +774,9 @@ drwxr-xr-x  2 root root     32768 2024-04-19 19:39 ./slackware64/a
 -rw-r--r--  1 root root       375 2021-09-25 18:44 ./slackware64/a/elvis-2.2_0-x86_64-8.txt
 -rw-r--r--  1 root root    712424 2021-09-25 18:44 ./slackware64/a/elvis-2.2_0-x86_64-8.txz
 -rw-r--r--  1 root root       163 2021-09-25 18:44 ./slackware64/a/elvis-2.2_0-x86_64-8.txz.asc
--rw-r--r--  1 root root       202 2024-04-05 18:08 ./slackware64/a/etc-15.1-x86_64-10.txt
--rw-r--r--  1 root root     28152 2024-04-05 18:08 ./slackware64/a/etc-15.1-x86_64-10.txz
--rw-r--r--  1 root root       195 2024-04-05 18:08 ./slackware64/a/etc-15.1-x86_64-10.txz.asc
+-rw-r--r--  1 root root       202 2024-04-21 18:20 ./slackware64/a/etc-15.1-x86_64-11.txt
+-rw-r--r--  1 root root     28252 2024-04-21 18:20 ./slackware64/a/etc-15.1-x86_64-11.txz
+-rw-r--r--  1 root root       195 2024-04-21 18:20 ./slackware64/a/etc-15.1-x86_64-11.txz.asc
 -rw-r--r--  1 root root       510 2023-10-06 19:30 ./slackware64/a/eudev-3.2.14-x86_64-1.txt
 -rw-r--r--  1 root root   1225420 2023-10-06 19:30 ./slackware64/a/eudev-3.2.14-x86_64-1.txz
 -rw-r--r--  1 root root       163 2023-10-06 19:30 ./slackware64/a/eudev-3.2.14-x86_64-1.txz.asc
@@ -2783,7 +2783,7 @@ drwxr-xr-x  2 root root     86016 2024-04-16 22:00 ./slackware64/kde
 -rw-r--r-- 1 root root       517 2024-02-15 21:47 ./slackware64/kde/zanshin-23.08.5-x86_64-1.txt
 -rw-r--r-- 1 root root    686104 2024-02-15 21:47 ./slackware64/kde/zanshin-23.08.5-x86_64-1.txz
 -rw-r--r-- 1 root root       163 2024-02-15 21:47 ./slackware64/kde/zanshin-23.08.5-x86_64-1.txz.asc
-drwxr-xr-x 2 root root    102400 2024-04-20 00:12 ./slackware64/l
+drwxr-xr-x 2 root root    102400 2024-04-21 21:43 ./slackware64/l
 -rw-r--r-- 1 root root       329 2022-03-06 20:00 ./slackware64/l/GConf-3.2.6-x86_64-8.txt
 -rw-r--r-- 1 root root    928144 2022-03-06 20:00 ./slackware64/l/GConf-3.2.6-x86_64-8.txz
 -rw-r--r-- 1 root root       163 2022-03-06 20:00 ./slackware64/l/GConf-3.2.6-x86_64-8.txz.asc
@@ -2799,9 +2799,9 @@ drwxr-xr-x 2 root root    102400 2024-04-20 00:12 ./slackware64/l
 -rw-r--r-- 1 root root       477 2024-04-15 19:17 ./slackware64/l/Mako-1.3.3-x86_64-1.txt
 -rw-r--r-- 1 root root    160848 2024-04-15 19:17 ./slackware64/l/Mako-1.3.3-x86_64-1.txz
 -rw-r--r-- 1 root root       195 2024-04-15 19:17 ./slackware64/l/Mako-1.3.3-x86_64-1.txz.asc
--rw-r--r-- 1 root root       484 2024-04-03 21:05 ./slackware64/l/PyQt-builder-1.16.0-x86_64-1.txt
--rw-r--r-- 1 root root     76744 2024-04-03 21:05 ./slackware64/l/PyQt-builder-1.16.0-x86_64-1.txz
--rw-r--r-- 1 root root       195 2024-04-03 21:05 ./slackware64/l/PyQt-builder-1.16.0-x86_64-1.txz.asc
+-rw-r--r-- 1 root root       484 2024-04-20 18:54 ./slackware64/l/PyQt-builder-1.16.1-x86_64-1.txt
+-rw-r--r-- 1 root root     77536 2024-04-20 18:54 ./slackware64/l/PyQt-builder-1.16.1-x86_64-1.txz
+-rw-r--r-- 1 root root       195 2024-04-20 18:54 ./slackware64/l/PyQt-builder-1.16.1-x86_64-1.txz.asc
 -rw-r--r-- 1 root root       290 2024-03-29 04:52 ./slackware64/l/PyQt5-5.15.10-x86_64-2.txt
 -rw-r--r-- 1 root root   4061464 2024-03-29 04:52 ./slackware64/l/PyQt5-5.15.10-x86_64-2.txz
 -rw-r--r-- 1 root root       195 2024-03-29 04:52 ./slackware64/l/PyQt5-5.15.10-x86_64-2.txz.asc
@@ -3883,9 +3883,9 @@ drwxr-xr-x 2 root root    102400 2024-04-20 00:12 ./slackware64/l
 -rw-r--r-- 1 root root       526 2024-04-01 17:10 ./slackware64/l/python-pillow-10.3.0-x86_64-1.txt
 -rw-r--r-- 1 root root    920760 2024-04-01 17:10 ./slackware64/l/python-pillow-10.3.0-x86_64-1.txz
 -rw-r--r-- 1 root root       195 2024-04-01 17:10 ./slackware64/l/python-pillow-10.3.0-x86_64-1.txz.asc
--rw-r--r-- 1 root root       392 2024-03-29 04:29 ./slackware64/l/python-pluggy-1.4.0-x86_64-2.txt
--rw-r--r-- 1 root root     43328 2024-03-29 04:29 ./slackware64/l/python-pluggy-1.4.0-x86_64-2.txz
--rw-r--r-- 1 root root       195 2024-03-29 04:29 ./slackware64/l/python-pluggy-1.4.0-x86_64-2.txz.asc
+-rw-r--r-- 1 root root       392 2024-04-21 02:30 ./slackware64/l/python-pluggy-1.5.0-x86_64-1.txt
+-rw-r--r-- 1 root root     44848 2024-04-21 02:30 ./slackware64/l/python-pluggy-1.5.0-x86_64-1.txz
+-rw-r--r-- 1 root root       195 2024-04-21 02:30 ./slackware64/l/python-pluggy-1.5.0-x86_64-1.txz.asc
 -rw-r--r-- 1 root root       280 2024-03-29 04:29 ./slackware64/l/python-ply-3.11-x86_64-9.txt
 -rw-r--r-- 1 root root     99648 2024-03-29 04:29 ./slackware64/l/python-ply-3.11-x86_64-9.txz
 -rw-r--r-- 1 root root       195 2024-03-29 04:29 ./slackware64/l/python-ply-3.11-x86_64-9.txz.asc
@@ -5777,13 +5777,13 @@ drwxr-xr-x   2 root root      4096 2023-03-08 20:34 ./slackware64/y
 -rw-r--r--   1 root root   1491108 2023-02-19 18:31 ./slackware64/y/nethack-3.6.7-x86_64-1.txz
 -rw-r--r--   1 root root       163 2023-02-19 18:31 ./slackware64/y/nethack-3.6.7-x86_64-1.txz.asc
 -rw-r--r--   1 root root        26 2020-12-30 21:55 ./slackware64/y/tagfile
-drwxr-xr-x  18 root root      4096 2024-04-20 00:13 ./source
--rw-r--r--   1 root root    616685 2024-04-20 00:13 ./source/CHECKSUMS.md5
--rw-r--r--   1 root root       195 2024-04-20 00:13 ./source/CHECKSUMS.md5.asc
--rw-r--r--   1 root root    859937 2024-04-20 00:13 ./source/FILE_LIST
--rw-r--r--   1 root root  28578445 2024-04-20 00:13 ./source/MANIFEST.bz2
+drwxr-xr-x  18 root root      4096 2024-04-21 21:44 ./source
+-rw-r--r--   1 root root    616685 2024-04-21 21:44 ./source/CHECKSUMS.md5
+-rw-r--r--   1 root root       195 2024-04-21 21:44 ./source/CHECKSUMS.md5.asc
+-rw-r--r--   1 root root    859937 2024-04-21 21:44 ./source/FILE_LIST
+-rw-r--r--   1 root root  28573657 2024-04-21 21:44 ./source/MANIFEST.bz2
 -rw-r--r--   1 root root       828 2022-02-02 04:43 ./source/README.TXT
-drwxr-xr-x 123 root root      4096 2024-04-19 19:18 ./source/a
+drwxr-xr-x 123 root root      4096 2024-04-21 18:16 ./source/a
 -rw-r--r--   1 root root       339 2023-09-28 19:06 ./source/a/FTBFSlog
 drwxr-xr-x   2 root root      4096 2022-02-15 18:15 ./source/a/aaa_base
 -rw-r--r--   1 root root     11041 2022-02-15 04:49 ./source/a/aaa_base/_aaa_base.tar.gz
@@ -6043,10 +6043,10 @@ drwxr-xr-x   2 root root      4096 2021-09-25 18:43 ./source/a/elvis
 -rw-r--r--   1 root root      1633 2004-02-22 06:19 ./source/a/elvis/elvis.clr
 -rw-r--r--   1 root root       673 2010-01-27 18:31 ./source/a/elvis/elvis.ref.c.getline.diff.gz
 -rw-r--r--   1 root root       828 2020-01-12 22:43 ./source/a/elvis/slack-desc
-drwxr-xr-x   2 root root      4096 2024-02-25 18:56 ./source/a/etc
+drwxr-xr-x   2 root root      4096 2024-04-21 18:20 ./source/a/etc
 -rw-r--r--   1 root root     28704 2024-02-23 19:59 ./source/a/etc/_etc.tar.gz
--rw-r--r--   1 root root      1248 2024-02-25 18:56 ./source/a/etc/doinst.sh.gz
--rwxr-xr-x   1 root root      3106 2024-04-04 00:51 ./source/a/etc/etc.SlackBuild
+-rw-r--r--   1 root root      1362 2024-04-21 18:20 ./source/a/etc/doinst.sh.gz
+-rwxr-xr-x   1 root root      3105 2024-04-21 17:47 ./source/a/etc/etc.SlackBuild
 -rw-r--r--   1 root root       940 2024-04-04 00:50 ./source/a/etc/group.new
 -rw-r--r--   1 root root      1128 2024-02-23 19:59 ./source/a/etc/nsswitch.conf
 -rw-r--r--   1 root root      2195 2024-04-04 00:50 ./source/a/etc/passwd.new
@@ -10054,8 +10054,8 @@ drwxr-xr-x   2 root root      4096 2024-04-15 19:17 ./source/l/Mako
 -rwxr-xr-x   1 root root      2963 2024-04-15 19:17 ./source/l/Mako/Mako.SlackBuild
 -rw-r--r--   1 root root        33 2018-11-26 21:01 ./source/l/Mako/Mako.url
 -rw-r--r--   1 root root       961 2018-02-27 06:12 ./source/l/Mako/slack-desc
-drwxr-xr-x   2 root root      4096 2024-04-03 21:05 ./source/l/PyQt-builder
--rw-r--r--   1 root root   2728899 2024-04-03 15:15 ./source/l/PyQt-builder/PyQt-builder-1.16.0.tar.lz
+drwxr-xr-x   2 root root      4096 2024-04-20 18:54 ./source/l/PyQt-builder
+-rw-r--r--   1 root root   2728070 2024-04-20 11:58 ./source/l/PyQt-builder/PyQt-builder-1.16.1.tar.lz
 -rwxr-xr-x   1 root root      3722 2024-04-03 21:05 ./source/l/PyQt-builder/PyQt-builder.SlackBuild
 -rw-r--r--   1 root root        39 2023-12-14 00:01 ./source/l/PyQt-builder/PyQt-builder.url
 -rw-r--r--   1 root root       944 2023-12-14 00:04 ./source/l/PyQt-builder/slack-desc
@@ -12023,10 +12023,10 @@ drwxr-xr-x   2 root root      4096 2024-04-01 17:09 ./source/l/python-pillow
 -rw-r--r--   1 root root        40 2020-05-03 01:46 ./source/l/python-pillow/Pillow.url
 -rwxr-xr-x   1 root root      3417 2024-04-01 17:09 ./source/l/python-pillow/python-pillow.SlackBuild
 -rw-r--r--   1 root root       987 2019-10-02 22:29 ./source/l/python-pillow/slack-desc
-drwxr-xr-x   2 root root      4096 2024-03-29 03:06 ./source/l/python-pluggy
--rw-r--r--   1 root root     65812 2024-01-24 13:45 ./source/l/python-pluggy/pluggy-1.4.0.tar.gz
+drwxr-xr-x   2 root root      4096 2024-04-21 02:29 ./source/l/python-pluggy
+-rw-r--r--   1 root root     67955 2024-04-20 21:34 ./source/l/python-pluggy/pluggy-1.5.0.tar.gz
 -rw-r--r--   1 root root        32 2024-01-24 20:40 ./source/l/python-pluggy/pluggy.url
--rwxr-xr-x   1 root root      3041 2024-03-29 03:06 ./source/l/python-pluggy/python-pluggy.SlackBuild
+-rwxr-xr-x   1 root root      3041 2024-04-21 02:30 ./source/l/python-pluggy/python-pluggy.SlackBuild
 -rw-r--r--   1 root root       853 2024-02-04 18:45 ./source/l/python-pluggy/slack-desc
 drwxr-xr-x   2 root root      4096 2024-03-29 03:06 ./source/l/python-ply
 -rw-r--r--   1 root root    121069 2018-02-15 19:01 ./source/l/python-ply/ply-3.11.tar.lz
