@@ -24,7 +24,7 @@ cd $(dirname $0) ; CWD=$(pwd)
 
 PKGNAM=etc
 VERSION=15.1
-BUILD=${BUILD:-10}
+BUILD=${BUILD:-11}
 
 # Automatically determine the architecture we're building on:
 if [ -z "$ARCH" ]; then
@@ -80,4 +80,3 @@ zcat $CWD/doinst.sh.gz > $PKG/install/doinst.sh
 # Build the package:
 cd $PKG
 /sbin/makepkg -l y -c n  $TMP/etc-$VERSION-$ARCH-$BUILD.txz
-
