@@ -1,3 +1,9 @@
+Sun Apr 21 21:41:34 UTC 2024
+a/etc-15.1-x86_64-11.txz:  Rebuilt.
+  Populate missing /etc/gshadow entries. Thanks to opty.
+l/PyQt-builder-1.16.1-x86_64-1.txz:  Upgraded.
+l/python-pluggy-1.5.0-x86_64-1.txz:  Upgraded.
++--------------------------+
 Sat Apr 20 00:10:39 UTC 2024
 l/gdk-pixbuf2-2.42.11-x86_64-2.txz:  Rebuilt.
   Recompiled with -Dtests=false -Dothers=enabled to fix gkrellm.
